more refactoring to match docs